samples/_failures_safe/1761201732_d5f22f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f45ad84.c: In function ‘main’:
./samples/SAFE/__tmp_6f45ad84.c:144:17: error: expected declaration or statement at end of input
  144 |                 printf("Enter first matrix:\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_6f45ad84.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f45ad84.c:144:17: error: expected declaration or statement at end of input
